--- a/ttpkit-http/Cargo.toml
+++ b/ttpkit-http/Cargo.toml
@@ -1,7 +1,24 @@
 [package]
 name = "ttpkit-http"
 version = "0.1.0"
+authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
 edition = "2024"
+readme = "README.md"
+license = "MIT"
+documentation = "https://docs.rs/ttpkit-http/"
+repository = "https://github.com/operutka/ttpkit"
+description = """
+Simple HTTP client and server implementation based on ttpkit.
+"""
+keywords = ["http", "ttpkit"]
+
+[[example]]
+name = "client"
+required-features = ["client"]
+
+[[example]]
+name = "server"
+required-features = ["server"]
 
 [features]
 default = []
@@ -55,14 +72,25 @@ version = "0.1"
 optional = true
 
 [dependencies.ttpkit]
+version = "0.1"
 path = "../ttpkit"
 features = ["tokio-codec"]
 
 [dependencies.ttpkit-url]
+version = "0.1"
 path = "../ttpkit-url"
 optional = true
 
 [dependencies.ttpkit-utils]
+version = "0.1"
 path = "../ttpkit-utils"
 features = ["io"]
 optional = true
+
+[dev-dependencies.tokio]
+version = "1"
+features = ["full"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
