Implement HTTP Digest from both client and server perspective

--- a/ttpkit-auth/Cargo.toml
+++ b/ttpkit-auth/Cargo.toml
@@ -14,8 +14,10 @@ keywords = ["authentication", "basic", "digest", "http", "ttpkit"]
 
 [dependencies]
 base64 = "0.22"
+digest = "0.10"
 md5 = "0.8"
 rand = "0.9"
+sha1 = "0.10"
 sha2 = "0.10"
 str-reader = "0.1"
 
